# Test_Project

./: CMakeLists.txt  Label_NYU40.h  PathTool.cpp  PathTool.hpp  QtOsgView.cpp  QtOsgView.h  README.md  main.cpp  osgqt.cpp  osgqt.h  osgqt.ui
app/: CMakeLists.txt
app/InstanceID/: CMakeLists.txt  InstanceID.cpp
app/LoadSavePointClouds/: CMakeLists.txt  LoadSavePointClouds.cpp
app/NormalPointCloud/: CMakeLists.txt  NormalPointCloud.cpp
app/ShowPointClouds/: CMakeLists.txt  ShowPointClouds.cpp
app/filter_passthough/: CMakeLists.txt  filter_passthoudh.cpp
app/removeOutline/: CMakeLists.txt  main.cpp
app/std_map/: CMakeLists.txt  main.cpp
app/thread_atomic/: CMakeLists.txt  thread_atomic.cpp
app/thread_mutex/: CMakeLists.txt  thread_mutex.cpp
cmake/: External_Eigen3.CMakeLists.txt.in  External_libzip.cmake  External_tinyply.CMakeLists.txt.in  FindOSG.cmake  Findtinyply.cmake  LinkEigen3.cmake  LinkOSG.cmake  LinkPCL.cmake  Linklibzip.cmake  UseEigen3.cmake  UseOSG.cmake  UsePCL.cmake  Uselibzip.cmake  Usetinyply.cmake
data/: SaveTestPly.ply  frame_000000.pointcloud.ply
elements/: CMakeLists.txt  Camera.h  CoordinateAxis.h  Light.h  Models.h  main.cc
elements/dataLoader/: dataLoader.cpp  dataLoader.h
src/service_client/: CMakeLists.txt  package.xml
src/service_client/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
src/talker/: CMakeLists.txt  package.xml
src/talker/launch/: talker_listener.launch
src/talker/src/: listener.cpp  talker.cpp
